--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="header top-header py-4 bg-light">
-      <div class="container text-center">
+      <div class="container text-center text-success">
         <h1>Wiki Hongos</h1>
       </div>
     </div>
